--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xeroui/vue",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "type": "module",
   "files": [
     "dist"
@@ -27,31 +27,30 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
-    "@heroicons/vue": "^2.2.0",
     "lodash": "^4.17.21",
-    "tailwind-merge": "^2.5.5",
-    "vue": "^3.5.13"
+    "lucide-vue-next": "^0.541.0",
+    "tailwind-merge": "^3.3.1",
+    "vue": "^3.5.19"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@storybook/vue3": "^8.4.7",
-    "@storybook/vue3-vite": "^8.4.7",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^20.17.10",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "storybook": "^8.4.7",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.3",
-    "vue-tsc": "^2.1.10"
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-essentials": "^9.0.0-alpha.12",
+    "@storybook/addon-interactions": "^9.0.0-alpha.10",
+    "@storybook/addon-onboarding": "^9.1.3",
+    "@storybook/blocks": "^9.0.0-alpha.17",
+    "@storybook/test": "^9.0.0-alpha.2",
+    "@storybook/vue3": "^9.1.3",
+    "@storybook/vue3-vite": "^9.1.3",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^20.19.11",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "prettier": "^3.6.2",
+    "storybook": "^9.1.3",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
+    "vue-tsc": "^3.0.6"
   },
   "repository": {
     "type": "git",
@@ -70,5 +69,5 @@
     "ui",
     "library"
   ],
-  "description": "A Vue 3 UI library with TailwindCSS"
+  "description": "Vue 3 UI library with TailwindCSS v4"
 }
